--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.0.12",
+    "nodemailer": "^6.9.0",
     "uuid": "^8.3.2"
   }
 }
